# knowledge-graph-lab

./: .coverage  .cursorules  .dockerignore  .env.example  .gitignore  API_KEY_SETUP.md  API_TEST_EXAMPLES.md  CLAUDE.md  COMPLETE_SYSTEM_SUMMARY.md  CONTRIBUTING.md  DATABASE-RESET.md  DOCKER-FIRST-POLICY.md  DOCKER-SETUP.md  Dockerfile  ENTITYEXT_EXAMPLES.json  ENTITYEXT_OUTPUT_VECTORDB.json  ENV_REQUIREMENTS.md  EXECUTION_COMPLETE.md  FIX_SUMMARY.md  GETTING-STARTED.md  IMPLEMENTATION-STATUS.md  INDEX.md  INTEGRATION-READINESS.md  INTERN-GUIDE.md  MERGE-CONFLICT-ANALYSIS.md  MIGRATION-MANIFEST.md  POST-MERGE-VERIFICATION.md  POSTGRES-RUNNING.md  QUICKSTART.md  QUICK_API_TESTS.txt  README.md  REBUILD_QUICK_START.md  REBUILD_SUMMARY.md  REORGANIZATION-COMPLETE.md  REORGANIZATION-PROPOSAL-PUBLISHING.md  REORGANIZATION-PROPOSAL.md  SECURITY.md  SERVER-STATUS.md  START-HERE.md  STRUCTURE-COMPARISON-PUBLISHING.md  (+18 more)
.claude/: settings.local.json
.cursor/commands/: checklist.md  clarify.md  constitution.md  implement.md  plan.md  specify.md  tasks.md
.cursor/rules/: specify-rules.mdc
.cursor/scripts/: setup-project.ps1
.dev/ai/: STATE-OF-THE-PROJECT.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: lint.yml
adr/: ADR-0001-Decisions-We've-Made.md
docs/: CONTRIBUTING.md  Capability-Map.md  DOC_WRITER.md  FULL_RESEARCH_INDEX.md  Glossary.md  MASTER-PRD.md  MASTER-WORK-TRACKER.md  ORGANIZATIONAL-RULES.md  Principles.md  README.md  STYLEGUIDE-REVIEW-PROMPT.md  STYLEGUIDE-v2.md  STYLEGUIDE-v3.md  STYLEGUIDE.md  UNIFIED-PROCESS.md  glossary.md  help.md  research-brief-template.md  row3-quality-standards.md
draft1/: .env.example  SETUP.md  docker-compose.yml
frontend/: .dockerignore  .gitignore  CONTEXT_PANEL_IMPLEMENTATION.md  DEPLOYMENT.md  Dockerfile  EXTRACTION_README.md  ONBOARDING_QUICKSTART.md  PORT_RESERVATION.md  README.md  SERVE_FRONTEND.md  config.example.txt  docker-compose.yml  extraction.html  extraction.js  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
memory/: constitution.md
modules/: README.md  VERSIONING-RULES.md
project-design/: deployment-strategy.md  user-journeys.md
raw-materials/: README.md
research/: Reading-List.md
rfcs/: RFC-0001-Naming.md
scripts/: lint_check.sh  preflight_check.py  reset_database.py  send_test_email.py  test_api_paths.sh  test_module_communication.py  validate_environment.py  validate_repository.py  verify_routes.py
src/: __init__.py
src/backend-architecture/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/backend-architecture/alembic/versions/: 20250123_initial_schema.py
src/backend-architecture/app/: main.py
src/backend-architecture/app/api/: __init__.py
src/backend-architecture/app/api/api_v1/: api.py
src/backend-architecture/app/api/api_v1/endpoints/: __init__.py  auth.py  entities.py  health.py  users.py
src/backend-architecture/app/auth/: __init__.py  security.py
src/backend-architecture/app/core/: config.py  database.py
src/backend-architecture/app/models/: __init__.py  api_request.py  base.py  entity.py  relationship.py  session.py  user.py
src/backend-architecture/app/schemas/: auth.py  entity.py
src/backend-architecture/tests/: conftest.py  test_auth.py
(+1739 files in other folders)
